# PWorldEngine

./: .gitignore  CMakeLists.txt  README.md  Taskfile.yml
.github/workflows/: release.yml
include/core/: CameraManager.h
include/world/: NoiseManager.h
src/: main.cpp
src/core/: CameraManager.cpp
src/world/: NoiseManager.cpp
